--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Montserrat', sans-serif;
-      background: url('fondo.jpg') no-repeat center center fixed;
+      background: url('game.jpg') no-repeat center center fixed;
       background-size: cover;
       overflow-x: hidden;
       color: white;
