--- a/index.html
+++ b/index.html
@@ -322,20 +322,8 @@
   <script>  
     // Lista de usuarios, con premium y fecha de caducidad  
     let users = JSON.parse(localStorage.getItem("users")) || [  
-      { username: "admin", password: "1234", premium: true, expiry: "2025-12-31" },  
-      { username: "gamer", password: "1234", premium: false, expiry: "-" },  
-      { username: "alfonso", password: "1", premium: true, expiry: "2025-12-31" },  
-      { username: "alberto", password: "1234", premium: false, expiry: "-" },  
-      { username: "pablo", password: "1234", premium: false, expiry: "2025-12-31" },  
-      { username: "hugo", password: "1234", premium: false, expiry: "-" },  
-      { username: "jorge", password: "1234", premium: false, expiry: "2025-12-31" },  
-      { username: "ivan", password: "1234", premium: false, expiry: "-" },  
-      { username: "roberto", password: "1234", premium: false, expiry: "2025-12-31" },  
-      { username: "javi", password: "1234", premium: false, expiry: "-" },  
-      { username: "zulmira", password: "1234", premium: false, expiry: "2025-12-31" },  
-      { username: "paula", password: "1234", premium: false, expiry: "-" },  
-      { username: "carmelo", password: "1234", premium: false, expiry: "2025-12-31" },  
-      { username: "rafa", password: "1234", premium: false, expiry: "-" }  
+      { username: "dueño", password: "1234", premium: true, expiry: "2025-12-31" },  
+      { username: "gamer", password: "1234", premium: false, expiry: "-" }
     ];  
 
     let loggedUser = null;  
