--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     // Lista de usuarios, con premium y fecha de caducidad  
     let users = JSON.parse(localStorage.getItem("users")) || [  
       { username: "dueño", password: "1234", premium: true, expiry: "2025-12-31" },  
-      { username: "gamer", password: "1234", premium: false, expiry: "-" }
+      { username: "franco", password: "1234", premium: false, expiry: "-" }
     ];  
 
     let loggedUser = null;  
