--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
     <button onclick="updateUser()">Guardar Cambios</button>
   </div>
 
-  <div id="gameGrid" style="display: none;">
+  <div class="grid" id="gameGrid" style="display: none;">
+   
     <div class="game">
       <a href="games/slope/index.html" target="_blank">
         <img src="games/slope/icon.png" alt="Slope" />
