--- a/index.html
+++ b/index.html
@@ -74,43 +74,42 @@
       background: #00bfa5;
     }
 
-    #gameGrid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 30px;
-      width: 90%;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    .game {
-      background: rgba(0, 0, 0, 0.6);
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
+    #gameGrid {  
+    display: grid;  
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));  
+    gap: 10px;  
+  }  
+    .game {  
+    width: 100%;  
+    aspect-ratio: 1 / 1; /* mantener proporción cuadrada en navegadores modernos */  
+    display: flex;  
+    flex-direction: column;  
+    align-items: center;  
+    justify-content: center;  
+    border: 1px solid #ccc;  
+    padding: 5px;  
+    background: #f5f5f5;  
+    border-radius: 8px;  
+    overflow: hidden;  
+  }  
 
     .game:hover {
       transform: scale(1.05);
       box-shadow: 0 0 15px #00ffe1;
     }
 
-    .game img {
-      width: 100%;
-      height: 140px;
-      object-fit: cover;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    }
+     .game img {  
+    max-width: 100%;  
+    max-height: 80px;  
+    object-fit: contain;  
+    display: block;  
+  }  
 
-    .game-title {
-      padding: 10px;
-      text-align: center;
-      font-weight: bold;
-      color: #00ffe1;
-      font-size: 1.1em;
-    }
+      .game-title {  
+    margin-top: 5px;  
+    font-size: 14px;  
+    text-align: center;  
+  }  
 
     #userPanel {
       position: fixed;
