--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <title>CELEX - Juegos</title>
   <link href="super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg" rel="stylesheet" />
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Montserrat', sans-serif;
-      background: url('game.jpg') no-repeat center center fixed;
-      background-size: cover;
-      overflow-x: hidden;
-      color: white;
-    }
+    body {  
+    margin: 0;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    background: radial-gradient(#000000, #0f0f0f);  
+    color: white;  
+    background-image: url("super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg");  
+    background-size: cover;  
+    background-attachment: fixed;  
+    background-repeat: no-repeat;  
+    position: relative;  
+    z-index: 0;  
+  }  
+
 
     .overlay {
       position: fixed;
@@ -27,14 +31,13 @@
       z-index: -1;
     }
 
-    h1 {
-      text-align: center;
-      font-weight: 700;
-      font-size: 3rem;
-      color: #00ffe1;
-      text-shadow: 0 0 15px #00ffe1;
-      margin-top: 30px;
-    }
+    h1 {  
+    text-align: center;  
+    margin: 30px 0 10px 0;  
+    font-size: 3em;  
+    color: white;  
+    text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
+
 
     /* Login centrado y grande */
     #loginContainer {
@@ -74,42 +77,49 @@
       background: #00bfa5;
     }
 
-    #gameGrid {  
+    .grid {  
     display: grid;  
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));  
-    gap: 10px;  
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));  
+    gap: 25px;  
+    padding: 20px;  
+    max-width: 1200px;  
+    margin: auto;  
   }  
+
     .game {  
-    width: 100%;  
-    aspect-ratio: 1 / 1; /* mantener proporción cuadrada en navegadores modernos */  
+    background: rgba(255, 255, 255, 0.05);  
+    border-radius: 15px;  
+    overflow: hidden;  
+    text-align: center;  
+    box-shadow: 0 0 15px #00fff255;  
+    transition: transform 0.2s, box-shadow 0.2s;  
+    height: 180px;  
     display: flex;  
     flex-direction: column;  
-    align-items: center;  
     justify-content: center;  
-    border: 1px solid #ccc;  
-    padding: 5px;  
-    background: #f5f5f5;  
-    border-radius: 8px;  
-    overflow: hidden;  
   }  
 
-    .game:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px #00ffe1;
-    }
 
-     .game img {  
-    max-width: 100%;  
-    max-height: 80px;  
-    object-fit: contain;  
-    display: block;  
+    .game:hover {  
+    transform: scale(1.05);  
+    box-shadow: 0 0 25px #00fff2aa;  
   }  
 
-      .game-title {  
-    margin-top: 5px;  
-    font-size: 14px;  
-    text-align: center;  
+  .game img {  
+    width: 80%;  
+    height: 120px;  
+    object-fit: cover;  
+    border-bottom: 2px solid #00fff2;  
+    margin: 0 auto;  
   }  
+
+  .game-title {  
+    font-size: 1em;  
+    padding: 8px;  
+    color: white;  
+    text-shadow: 0 0 5px #00fff2;  
+  }  
+
 
     #userPanel {
       position: fixed;
