--- a/index.html
+++ b/index.html
@@ -1,215 +1,221 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CELEX - Juegos</title>
-  <link href="super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg" rel="stylesheet" />
-  <style>
+<!DOCTYPE html>  
+<html lang="es">  
+<head>  
+  <meta charset="UTF-8" />  
+  <meta name="viewport" content="width=device-width, initial-scale=1" />  
+  <title>CELEX - Juegos</title>  
+  <style>  
+    /* Fondo y cuerpo */  
     body {  
-    margin: 0;  
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-    background: radial-gradient(#000000, #0f0f0f);  
-    color: white;  
-    background-image: url("super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg");  
-    background-size: cover;  
-    background-attachment: fixed;  
-    background-repeat: no-repeat;  
-    position: relative;  
-    z-index: 0;  
-  }  
+      margin: 0;  
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+      background: radial-gradient(#000000, #0f0f0f);  
+      color: white;  
+      background-image: url("super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg");  
+      background-size: cover;  
+      background-attachment: fixed;  
+      background-repeat: no-repeat;  
+      position: relative;  
+      z-index: 0;  
+    }  
 
+    /* Overlay para difuminar la imagen de fondo */  
+    .overlay {  
+      position: fixed;  
+      top: 0;  
+      left: 0;  
+      width: 100%;  
+      height: 100%;  
+      backdrop-filter: blur(8px);  
+      background-color: rgba(0, 0, 0, 0.5);  
+      z-index: -1;  
+    }  
 
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      backdrop-filter: blur(8px);
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: -1;
-    }
-
+    /* Título principal */  
     h1 {  
-    text-align: center;  
-    margin: 30px 0 10px 0;  
-    font-size: 3em;  
-    color: white;  
-    text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
+      text-align: center;  
+      margin: 30px 0 10px 0;  
+      font-size: 3em;  
+      color: white;  
+      text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
+    }  
 
+    /* Contenedor de login */  
+    #loginContainer {  
+      width: 400px;  
+      margin: 100px auto;  
+      background: rgba(0, 0, 0, 0.85);  
+      padding: 40px 30px;  
+      border-radius: 20px;  
+      box-shadow: 0 0 20px #00ffe1;  
+      text-align: center;  
+    }  
 
-    /* Login centrado y grande */
-    #loginContainer {
-      width: 400px;
-      margin: 100px auto;
-      background: rgba(0, 0, 0, 0.85);
-      padding: 40px 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #00ffe1;
-      text-align: center;
-    }
+    #loginContainer input {  
+      width: 100%;  
+      padding: 15px;  
+      margin: 15px 0;  
+      border: none;  
+      border-radius: 8px;  
+      background: #1a1a1a;  
+      color: white;  
+      font-size: 1.1em;  
+    }  
 
-    #loginContainer input {
-      width: 100%;
-      padding: 15px;
-      margin: 15px 0;
-      border: none;
-      border-radius: 8px;
-      background: #1a1a1a;
-      color: white;
-      font-size: 1.1em;
-    }
+    #loginContainer button {  
+      width: 100%;  
+      padding: 15px;  
+      background: #00ffe1;  
+      border: none;  
+      border-radius: 8px;  
+      font-weight: 700;  
+      font-size: 1.2em;  
+      cursor: pointer;  
+      transition: background 0.3s ease;  
+    }  
 
-    #loginContainer button {
-      width: 100%;
-      padding: 15px;
-      background: #00ffe1;
-      border: none;
-      border-radius: 8px;
-      font-weight: 700;
-      font-size: 1.2em;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
+    #loginContainer button:hover {  
+      background: #00bfa5;  
+    }  
 
-    #loginContainer button:hover {
-      background: #00bfa5;
-    }
-
+    /* Grid de juegos */  
     .grid {  
-    display: grid;  
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));  
-    gap: 25px;  
-    padding: 20px;  
-    max-width: 1200px;  
-    margin: auto;  
-  }  
+      display: grid;  
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));  
+      gap: 25px;  
+      padding: 20px;  
+      max-width: 1200px;  
+      margin: auto;  
+    }  
 
+    /* Tarjeta de juego */  
     .game {  
-    background: rgba(255, 255, 255, 0.05);  
-    border-radius: 15px;  
-    overflow: hidden;  
-    text-align: center;  
-    box-shadow: 0 0 15px #00fff255;  
-    transition: transform 0.2s, box-shadow 0.2s;  
-    height: 180px;  
-    display: flex;  
-    flex-direction: column;  
-    justify-content: center;  
-  }  
+      background: rgba(255, 255, 255, 0.05);  
+      border-radius: 15px;  
+      overflow: hidden;  
+      text-align: center;  
+      box-shadow: 0 0 15px #00fff255;  
+      transition: transform 0.2s, box-shadow 0.2s;  
+      height: 180px;  
+      display: flex;  
+      flex-direction: column;  
+      justify-content: center;  
+    }  
 
-
+    /* Efecto hover en la tarjeta */  
     .game:hover {  
-    transform: scale(1.05);  
-    box-shadow: 0 0 25px #00fff2aa;  
-  }  
+      transform: scale(1.05);  
+      box-shadow: 0 0 25px #00fff2aa;  
+    }  
 
-  .game img {  
-    width: 80%;  
-    height: 120px;  
-    object-fit: cover;  
-    border-bottom: 2px solid #00fff2;  
-    margin: 0 auto;  
-  }  
+    /* Imagen del juego */  
+    .game img {  
+      width: 80%;  
+      height: 120px;  
+      object-fit: cover;  
+      border-bottom: 2px solid #00fff2;  
+      margin: 0 auto;  
+    }  
 
-  .game-title {  
-    font-size: 1em;  
-    padding: 8px;  
-    color: white;  
-    text-shadow: 0 0 5px #00fff2;  
-  }  
+    /* Título del juego */  
+    .game-title {  
+      font-size: 1em;  
+      padding: 8px;  
+      color: white;  
+      text-shadow: 0 0 5px #00fff2;  
+    }  
 
+    /* Panel de usuario */  
+    #userPanel {  
+      position: fixed;  
+      top: 20px;  
+      right: 20px;  
+      background-color: #00ffe1;  
+      color: black;  
+      width: 45px;  
+      height: 45px;  
+      border-radius: 50%;  
+      display: flex;  
+      align-items: center;  
+      justify-content: center;  
+      font-weight: bold;  
+      cursor: pointer;  
+      z-index: 50;  
+      font-size: 1.4em;  
+      user-select: none;  
+    }  
 
-    #userPanel {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background-color: #00ffe1;
-      color: black;
-      width: 45px;
-      height: 45px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      cursor: pointer;
-      z-index: 50;
-      font-size: 1.4em;
-      user-select: none;
-    }
+    /* Dropdown del usuario */  
+    #userDropdown {  
+      position: fixed;  
+      top: 75px;  
+      right: 20px;  
+      background: #111;  
+      padding: 15px 20px;  
+      border-radius: 15px;  
+      display: none;  
+      color: white;  
+      width: 220px;  
+      box-shadow: 0 0 10px #00ffe1;  
+      z-index: 50;  
+    }  
 
-    #userDropdown {
-      position: fixed;
-      top: 75px;
-      right: 20px;
-      background: #111;
-      padding: 15px 20px;
-      border-radius: 15px;
-      display: none;
-      color: white;
-      width: 220px;
-      box-shadow: 0 0 10px #00ffe1;
-      z-index: 50;
-    }
+    /* Configuración del usuario */  
+    #userSettings {  
+      position: fixed;  
+      top: 160px;  
+      right: 20px;  
+      width: 320px;  
+      background: rgba(0,0,0,0.9);  
+      color: white;  
+      padding: 25px;  
+      border-radius: 15px;  
+      box-shadow: 0 0 15px #00ffe1;  
+      z-index: 50;  
+      display: none;  
+    }  
 
-    #userSettings {
-      position: fixed;
-      top: 160px;
-      right: 20px;
-      width: 320px;
-      background: rgba(0,0,0,0.9);
-      color: white;
-      padding: 25px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px #00ffe1;
-      z-index: 50;
-      display: none;
-    }
+    #userSettings h3 {  
+      margin-top: 0;  
+      margin-bottom: 15px;  
+      color: #00ffe1;  
+      text-align: center;  
+    }  
 
-    #userSettings h3 {
-      margin-top: 0;
-      margin-bottom: 15px;
-      color: #00ffe1;
-      text-align: center;
-    }
+    #userSettings p {  
+      margin: 8px 0;  
+      font-weight: 600;  
+    }  
 
-    #userSettings p {
-      margin: 8px 0;
-      font-weight: 600;
-    }
+    #userSettings input {  
+      width: 100%;  
+      padding: 10px;  
+      margin: 10px 0 20px 0;  
+      background: #1a1a1a;  
+      border: none;  
+      color: white;  
+      border-radius: 8px;  
+      font-size: 1em;  
+    }  
 
-    #userSettings input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0 20px 0;
-      background: #1a1a1a;
-      border: none;
-      color: white;
-      border-radius: 8px;
-      font-size: 1em;
-    }
+    #userSettings button {  
+      background: #00ffe1;  
+      border: none;  
+      padding: 15px;  
+      border-radius: 8px;  
+      font-weight: bold;  
+      cursor: pointer;  
+      width: 100%;  
+      font-size: 1.1em;  
+      transition: background 0.3s ease;  
+    }  
 
-    #userSettings button {
-      background: #00ffe1;
-      border: none;
-      padding: 15px;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      width: 100%;
-      font-size: 1.1em;
-      transition: background 0.3s ease;
-    }
-
-    #userSettings button:hover {
-      background: #00bfa5;
-    }
-
-  </style>
-</head>
-<body>
+    #userSettings button:hover {  
+      background: #00bfa5;  
+    }  
+  </style>  
+</head>  
+<body> 
   <div class="overlay"></div>
 
   <h1>CELEX - Juegos</h1>
