--- a/index.html
+++ b/index.html
@@ -42,13 +42,19 @@
 
     /* Contenedor de login */  
     #loginContainer {  
-      width: 400px;  
+      width: 350px; /* Reducido para que no sobresalga si la pantalla es grande */  
+      max-width: 90%; /* Para adaptarse en pantallas menores */  
       margin: 100px auto;  
       background: rgba(0, 0, 0, 0.85);  
-      padding: 40px 30px;  
+      padding: 40px 20px;  
       border-radius: 20px;  
       box-shadow: 0 0 20px #00ffe1;  
       text-align: center;  
+    }  
+
+    #loginContainer h2 {  
+      margin-top: 0;  
+      margin-bottom: 20px;  
     }  
 
     #loginContainer input {  
@@ -81,14 +87,14 @@
     /* Grid de juegos */  
     .grid {  
       display: grid;  
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));  
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajustado para rectángulos largos */  
       gap: 25px;  
       padding: 20px;  
       max-width: 1200px;  
       margin: auto;  
     }  
 
-    /* Tarjeta de juego */  
+    /* Tarjeta de juego: rectángulo largo y delgado */  
     .game {  
       background: rgba(255, 255, 255, 0.05);  
       border-radius: 15px;  
@@ -96,10 +102,11 @@
       text-align: center;  
       box-shadow: 0 0 15px #00fff255;  
       transition: transform 0.2s, box-shadow 0.2s;  
-      height: 180px;  
+      height: 150px;   /* Altura ajustada para rectángulo */  
       display: flex;  
       flex-direction: column;  
       justify-content: center;  
+      padding: 10px;  
     }  
 
     /* Efecto hover en la tarjeta */  
@@ -108,10 +115,10 @@
       box-shadow: 0 0 25px #00fff2aa;  
     }  
 
-    /* Imagen del juego */  
+    /* Imagen del juego - ajustada para ser más larga y delgada */  
     .game img {  
       width: 80%;  
-      height: 120px;  
+      max-height: 90px; /* Control de altura para que no sea muy grande */  
       object-fit: cover;  
       border-bottom: 2px solid #00fff2;  
       margin: 0 auto;  
@@ -215,7 +222,7 @@
     }  
   </style>  
 </head>  
-<body> 
+<body>  
   <div class="overlay"></div>
 
   <h1>CELEX - Juegos</h1>
