--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>  
+!DOCTYPE html>  
 <html lang="es">  
 <head>  
 <meta charset="UTF-8" />  
-<meta name="viewport" content="width=device-width, initial-scale=1" />  
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
 <title>CELEX - Juegos</title>  
 <style>  
-  /* Fondo y cuerpo */  
+  /* Reset general y estilos base */  
+  * {  
+    box-sizing: border-box;  
+  }  
+
+  /* Fondo y efectos */  
   body {  
     margin: 0;  
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
@@ -18,14 +23,14 @@
     position: relative;  
     z-index: 0;  
   }  
-
-  /* Overlay para difuminar la imagen de fondo */  
-  .overlay {  
+  body::before {  
+    content: "";  
     position: fixed;  
-    top: 0; left: 0;  
-    width: 100%; height: 100%;  
-    backdrop-filter: blur(8px);  
-    background-color: rgba(0, 0, 0, 0.5);  
+    inset: 0;  
+    background-size: cover;  
+    background-position: center;  
+    background-repeat: no-repeat;  
+    filter: brightness(0.3) blur(1px);  
     z-index: -1;  
   }  
 
@@ -38,165 +43,175 @@
     text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
   }  
 
-  /* Contenedor de login */  
-  #loginContainer {  
-    width: 350px;  
-    max-width: 90%;  
-    margin: 100px auto;  
-    background: rgba(0, 0, 0, 0.85);  
-    padding: 40px 20px;  
-    border-radius: 20px;  
-    box-shadow: 0 0 20px #00ffe1;  
-    text-align: center;  
-  }  
-
-  #loginContainer h2 {  
-    margin-top: 0;  
-    margin-bottom: 20px;  
-  }  
-
-  #loginContainer input {  
-    width: 100%;  
-    padding: 15px;  
-    margin: 15px 0;  
-    border: none;  
-    border-radius: 8px;  
-    background: #1a1a1a;  
-    color: white;  
-    font-size: 1.1em;  
-  }  
-
-  #loginContainer button {  
-    width: 100%;  
-    padding: 15px;  
-    background: #00ffe1;  
-    border: none;  
-    border-radius: 8px;  
-    font-weight: 700;  
-    font-size: 1.2em;  
+  /* Botón de alternar créditos (ejemplo) */  
+  #toggleButton {  
+    width: 250px;  
+    height: 50px;  
+    margin: 20px auto;  
+    background: rgba(255,255,255,0.1);  
+    border-radius: 10px;  
+    box-shadow: 0 0 20px #ffffff, 0 0 40px #ffffff inset;  
+    display: flex;  
+    align-items: center;  
+    justify-content: center;  
     cursor: pointer;  
-    transition: background 0.3s ease;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    font-weight: bold;  
+    font-size: 1.2em;  
+    color: #fff;  
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
+    transition: all 0.3s ease;  
   }  
 
-  #loginContainer button:hover {  
-    background: #00bfa5;  
+  /* Sección créditos (opcional) */  
+  #creditsSection {  
+    display: none;  
+    text-align: center;  
+    padding: 20px;  
+    max-width: 800px;  
+    margin: auto;  
+    border-radius: 10px;  
+    background: rgba(255,255,255,0.05);  
+    box-shadow: 0 0 20px #ffffff inset;  
+    color: #fff;  
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    font-size: 1.2em;  
   }  
 
   /* Grid de juegos */  
   .grid {  
     display: grid;  
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));  
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));  
     gap: 25px;  
     padding: 20px;  
     max-width: 1200px;  
     margin: auto;  
   }  
-
-  /* Tarjeta de juego: rectángulo largo y delgado */  
+  /* Tarjeta de juego */  
   .game {  
-    background: rgba(255, 255, 255, 0.05);  
+    background: rgba(255,255,255,0.05);  
     border-radius: 15px;  
     overflow: hidden;  
     text-align: center;  
     box-shadow: 0 0 15px #00fff255;  
     transition: transform 0.2s, box-shadow 0.2s;  
-    height: 150px;   
+    height: 180px;  
     display: flex;  
     flex-direction: column;  
     justify-content: center;  
-    padding: 10px;  
   }  
-
-  /* Efecto hover en la tarjeta */  
   .game:hover {  
     transform: scale(1.05);  
     box-shadow: 0 0 25px #00fff2aa;  
   }  
-
-  /* Imagen del juego - ajustada para ser más larga y delgada */  
   .game img {  
     width: 80%;  
-    max-height: 90px;  
+    height: 120px;  
     object-fit: cover;  
     border-bottom: 2px solid #00fff2;  
     margin: 0 auto;  
   }  
 
   /* Título del juego */  
-  .game-title {  
-    font-size: 1em;  
-    padding: 8px;  
-    color: white;  
-    text-shadow: 0 0 5px #00fff2;  
-  }  
+      /* Título del juego */  
+    .game-title {  
+      font-size: 1em;  
+      padding: 8px;  
+      color: white;  
+      text-shadow: 0 0 5px #00fff2;  
+    }  
 
-  /* Panel de usuario */  
-  #userPanel {  
-    position: fixed;  
-    top: 20px; right: 20px;  
-    background-color: #00ffe1;  
-    color: black;  
-    width: 45px; height: 45px;  
-    border-radius: 50%;  
-    display: flex;  
-    align-items: center; justify-content: center;  
-    font-weight: bold; font-size: 1.4em;  
-    cursor: pointer;  
-    z-index: 50;  
-    user-select: none;  
-  }  
+    /* Enlaces */  
+    a {  
+      color: white;  
+      text-decoration: none;  
+    }  
+    a:hover {  
+      text-decoration: underline;  
+    }  
 
-  /* Dropdown del usuario */  
-  #userDropdown {  
-    position: fixed;  
-    top: 75px; right: 20px;  
-    background: #111; padding: 15px 20px;  
-    border-radius: 15px;  
-    display: none;  
-    color: white;  
-    width: 220px;  
-    box-shadow: 0 0 10px #00ffe1;  
-    z-index: 50;  
-  }  
+    /* Estilos para el panel de usuario y configuraciones */  
+    #userPanel {  
+      position: fixed;  
+      top: 20px; right: 20px;  
+      background-color: #00ffe1;  
+      color: black;  
+      width: 45px; height: 45px;  
+      border-radius: 50%;  
+      display: flex;  
+      align-items: center; justify-content: center;  
+      font-weight: bold; font-size: 1.4em;  
+      cursor: pointer;  
+      z-index: 50;  
+      user-select: none;  
+    }  
 
-  /* Configuración del usuario */  
-  #userSettings {  
-    position: fixed;  
-    top: 160px; right: 20px;  
-    width: 320px; background: rgba(0,0,0,0.9);  
-    color: white;  
-    padding: 25px; border-radius: 15px;  
-    box-shadow: 0 0 15px #00ffe1;  
-    z-index: 50;  
-    display: none;  
-  }  
+    /* Dropdown del usuario (oculto por defecto, se muestra con JS) */  
+    #userDropdown {  
+      position: fixed;  
+      top: 75px; right: 20px;  
+      background: #111;  
+      padding: 15px 20px;  
+      border-radius: 15px;  
+      display: none;  
+      color: white;  
+      width: 220px;  
+      box-shadow: 0 0 10px #00ffe1;  
+      z-index: 50;  
+    }  
 
-  #userSettings h3 {  
-    margin-top: 0; margin-bottom: 15px;  
-    color: #00ffe1; text-align: center;  
-  }  
+    /* Configuración de usuario */  
+    #userSettings {  
+      position: fixed;  
+      top: 160px; right: 20px;  
+      width: 320px;  
+      background: rgba(0,0,0,0.9);  
+      color: white;  
+      padding: 25px;  
+      border-radius: 15px;  
+      box-shadow: 0 0 15px #00ffe1;  
+      z-index: 50;  
+      display: none;  
+    }  
 
-  #userSettings p {  
-    margin: 8px 0; font-weight: 600;  
-  }  
-
-  #userSettings input {  
-    width: 100%; padding: 10px; margin: 10px 0 20px 0;  
-    background: #1a1a1a; border: none; color: white; border-radius: 8px; font-size: 1em;  
-  }  
-
-  #userSettings button {  
-    background: #00ffe1; border: none; padding: 15px; border-radius: 8px;  
-    font-weight: bold; cursor: pointer; width: 100%; font-size: 1.1em; transition: background 0.3s ease;  
-  }  
-
-  #userSettings button:hover {  
-    background: #00bfa5;  
-  }  
-</style>  
+    #userSettings h3 {  
+      margin-top: 0;  
+      margin-bottom: 15px;  
+      color: #00ffe1;  
+      text-align: center;  
+    }  
+    #userSettings p {  
+      margin: 8px 0;  
+      font-weight: 600;  
+    }  
+    #userSettings input {  
+      width: 100%;  
+      padding: 10px;  
+      margin: 10px 0 20px 0;  
+      background: #1a1a1a;  
+      border: none;  
+      color: white;  
+      border-radius: 8px;  
+      font-size: 1em;  
+    }  
+    #userSettings button {  
+      background: #00ffe1;  
+      border: none;  
+      padding: 15px;  
+      border-radius: 8px;  
+      font-weight: bold;  
+      cursor: pointer;  
+      width: 100%;  
+      font-size: 1.1em;  
+      transition: background 0.3s ease;  
+    }  
+    #userSettings button:hover {  
+      background: #00bfa5;  
+    }  
+  </style>  
 </head>  
 <body>  
-<div class="overlay"></div>  
 
 <h1>CELEX - Juegos</h1>  
 
