--- a/index.html
+++ b/index.html
@@ -1,134 +1,174 @@
-<!DOCTYPE html>  
-<html lang="es">  
-<head>  
-<meta charset="UTF-8" />  
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
-<title>CELEX - Juegos</title>  
-<style>  
-  * {  
-    box-sizing: border-box;  
-  }  
-  
-  body {  
-    margin: 0;  
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-    background: radial-gradient(#000000, #0f0f0f);  
-    color: white;  
-    background-image: url("super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg");  
-    background-size: cover;  
-    background-attachment: fixed;  
-    background-repeat: no-repeat;  
-    position: relative;  
-    z-index: 0;  
-  }  
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CELEX - Juegos</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Montserrat', sans-serif;
+      background: url('game.jpg') no-repeat center center fixed;
+      font-family: 'Segoe UI', sans-serif;
+      background: url('fondo.jpg') no-repeat center center fixed;
+      background-size: cover;
+       overflow-x: hidden;
+      color: white;
+    }
 
-  body::before {  
-    content: "";  
-    position: fixed;  
-    inset: 0;  
-    background-size: cover;  
-    background-position: center;  
-    background-repeat: no-repeat;  
-    filter: brightness(0.3) blur(1px);  
-    z-index: -1;  
-  }  
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      inset: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(4px);
+      z-index: -1;
+    }
 
-  h1 {  
-    text-align: center;  
-    margin: 30px 0 10px 0;  
-    font-size: 3em;  
-    color: white;  
-    text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
-  }  
+    h1 {
+      text-align: center;
+      font-weight: 700;
+      font-size: 3rem;
+      color: #00ffe1;
+      text-shadow: 0 0 15px #00ffe1;
+      margin-top: 30px;
+      color: #00ffe1;
+      text-shadow: 0 0 10px #00ffe1;
+    }
 
-  #toggleButton {  
-    width: 250px;  
-    height: 50px;  
-    margin: 20px auto;  
-    background: rgba(255,255,255,0.1);  
-    border-radius: 10px;  
-    box-shadow: 0 0 20px #ffffff, 0 0 40px #ffffff inset;  
-    display: flex;  
-    align-items: center;  
-    justify-content: center;  
-    cursor: pointer;  
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-    font-weight: bold;  
-    font-size: 1.2em;  
-    color: #fff;  
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
-    transition: all 0.3s ease;  
-  }  
+    #loginContainer {
+@@ -40,31 +35,64 @@
+      background: rgba(0, 0, 0, 0.8);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px #00ffe1;
+      box-shadow: 0 0 10px #00ffe1;
+    }
 
-  #creditsSection {  
-    display: none;  
-    text-align: center;  
-    padding: 20px;  
-    max-width: 800px;  
-    margin: auto;  
-    border-radius: 10px;  
-    background: rgba(255,255,255,0.05);  
-    box-shadow: 0 0 20px #ffffff inset;  
-    color: #fff;  
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-    font-size: 1.2em;  
-  }  
+    #loginContainer input {
+    input, button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      margin-top: 10px;
+      border: none;
+      border-radius: 5px;
+    }
 
-  .grid {  
-    display: grid;  
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));  
-    gap: 25px;  
-    padding: 20px;  
-    max-width: 1200px;  
-    margin: auto;  
-  }  
+    input {
+      background: #1a1a1a;
+      color: white;
+    }
 
-  .game {  
-    background: rgba(255, 255, 255, 0.05);  
-    border-radius: 15px;  
-    overflow: hidden;  
-    text-align: center;  
-    box-shadow: 0 0 15px #00fff255;  
-    transition: transform 0.2s, box-shadow 0.2s;  
-    height: 180px;  
-    display: flex;  
-    flex-direction: column;  
-    justify-content: center;  
-  }  
+    #loginContainer button {
+      width: 100%;
+      padding: 10px;
+    button {
+      background: #00ffe1;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+    }
 
-  .game:hover {  
-    transform: scale(1.05);  
-    box-shadow: 0 0 25px #00fff2aa;  
-  }  
+    #userPanel {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background-color: #00ffe1;
+      color: black;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 10;
+    }
 
-  .game img {  
-    width: 80%;  
-    height: 120px;  
-    object-fit: cover;  
-    border-bottom: 2px solid #00fff2;  
-    margin: 0 auto;  
-  }  
+    #userDropdown, #userSettings {
+      position: absolute;
+      top: 70px;
+      right: 20px;
+      background: #111;
+      padding: 20px;
+      border-radius: 15px;
+      color: white;
+      display: none;
+      width: 250px;
+      box-shadow: 0 0 10px #00ffe1;
+    }
 
-  .game-title {  
-    font-size: 1em;  
-    padding: 8px;  
-    color: white;  
-    text-shadow: 0 0 5px #00fff2;  
-  }  
+    #userDropdown p {
+      margin: 5px 0;
+    }
 
-  a {  
-    color: white;  
-    text-decoration: none;  
-  }  
+    #gameGrid {
+      display: grid;
+      display: none;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 30px;
+@@ -77,7 +105,6 @@
+      background: rgba(0, 0, 0, 0.6);
+      border-radius: 15px;
+      overflow: hidden;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
 
-  a:hover {  
-    text-decoration: underline;  
-  }  
-</style>  
-</head>  
-<body>  
- 
+@@ -90,49 +117,18 @@
+      width: 100%;
+      height: 140px;
+      object-fit: cover;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .game-title {
+      padding: 10px;
+      text-align: center;
+      font-weight: bold;
+      color: #00ffe1;
+      font-size: 1.1em;
+    }
+
+    #userPanel {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background-color: #00ffe1;
+      color: black;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 10;
+    }
+
+    #userDropdown {
+      position: absolute;
+      top: 70px;
+      right: 20px;
+      background: #111;
+      padding: 10px;
+      border-radius: 10px;
+      display: none;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <div class="overlay"></div>
 
 <h1>CELEX - Juegos</h1>  
 
